--- a/style.css
+++ b/style.css
@@ -1,143 +1,198 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-body{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #5392F0;
-}
-::selection{
-  color: #fcf;
-  background: #5972F0;
-}
-.wrapper{
-  width: 380px;
-  padding: 40px 30px 50px 30px;
-  background: #fff;
-  border-radius: 5px;
-  text-align: center;
-  box-shadow: 10px 10px 15px rgba(0,0,0,0.1);
-}
-.wrapper header{
-  font-size: 35px;
-  font-weight: 600;
-}
-.wrapper form{
-  margin: 40px 0;
-}
-form .field{
-  width: 100%;
-  margin-bottom: 20px;
-}
-form .field.shake{
-  animation: shake 0.3s ease-in-out;
-}
-@keyframes shake {
-  0%, 100%{
-    margin-left: 0px;
-  }
-  20%, 80%{
-    margin-left: -12px;
-  }
-  40%, 60%{
-    margin-left: 12px;
-  }
-}
-form .field .input-area{
-  height: 50px;
-  width: 100%;
-  position: relative;
-}
-form input{
-  width: 100%;
-  height: 100%;
-  outline: none;
-  padding: 0 45px;
-  font-size: 18px;
-  background: none;
-  caret-color: #5372F0;
-  border-radius: 5px;
-  border: 1px solid #bfbfbf;
-  border-bottom-width: 2px;
-  transition: all 0.2s ease;
-}
-form .field input:focus,
-form .field.valid input{
-  border-color: #5372F0;
-}
-form .field.shake input,
-form .field.error input{
-  border-color: #dc3545;
-}
-.field .input-area i{
+
+#red{
   position: absolute;
-  top: 50%;
-  font-size: 18px;
-  pointer-events: none;
-  transform: translateY(-50%);
+  margin-top: 700px;
+  margin-left: 700px;
+width: 50px;
+height: 50px;
+background-color: red;
 }
-.input-area .icon{
-  left: 15px;
-  color: #bfbfbf;
-  transition: color 0.2s ease;
+
+
+#blue{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 780px;
+  width: 50px;
+height: 50px;
+background-color: blue;
 }
-.input-area .error-icon{
-  right: 15px;
-  color: #dc3545;
+
+#yellow{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 860px;
+  width: 50px;
+height: 50px;
+background-color: yellow;
 }
-form input:focus ~ .icon,
-form .field.valid .icon{
-  color: #5372F0;
+
+#green{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 940px;
+  width: 50px;
+height: 50px;
+background-color: green;
 }
-form .field.shake input:focus ~ .icon,
-form .field.error input:focus ~ .icon{
-  color: #bfbfbf;
+
+
+
+#red:hover{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 700px;
+transform: scale(1.2);
+background-color: red;
 }
-form input::placeholder{
-  color: #bfbfbf;
-  font-size: 17px;
+
+
+#blue:hover{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 780px;
+  transform: scale(1.2);
+background-color: blue;
 }
-form .field .error-txt{
-  color: #dc3545;
-  text-align: left;
-  margin-top: 5px;
+
+#yellow:hover{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 860px;
+  transform: scale(1.2);
+background-color: yellow;
 }
-form .field .error{
-  display: none;
+
+#green:hover{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 940px;
+  
+transform: scale(1.2);
+background-color: green;
 }
-form .field.shake .error,
-form .field.error .error{
-  display: block;
+
+
+#red:active{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 700px;
+transform: scale(1.1);
+background-color: red;
 }
-form .pass-txt{
-  text-align: left;
-  margin-top: -10px;
+
+
+#blue:active{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 780px;
+  transform: scale(1.1);
+background-color: blue;
 }
-.wrapper a{
-  color: #5372F0;
-  text-decoration: none;
+
+#yellow:active{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 860px;
+  transform: scale(1.1);
+background-color: yellow;
 }
-.wrapper a:hover{
-  text-decoration: underline;
+
+#green:active{
+  position: absolute;
+  margin-top: 700px;
+  margin-left: 940px;
+  
+transform: scale(1.1);
+background-color: green;
 }
-form input[type="submit"]{
-  height: 50px;
-  margin-top: 30px;
-  color: #fff;
-  padding: 0;
-  border: none;
-  background: #5372F0;
-  cursor: pointer;
-  border-bottom: 2px solid rgba(0,0,0,0.1);
-  transition: all 0.3s ease;
+
+#guess{
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 700px;
+  width: 290px;
+height: 290px;
+background-color: black;
 }
-form input[type="submit"]:hover{
-  background: #2c52ed;
+
+#casovac{
+  position: absolute;
+  margin-top: 200px;
+  margin-left: 710px;
+  
+font-size: 60px;
+font-family: Comic Sans MS;
+}
+
+#skore{
+  position: absolute;
+  margin-top: 100px;
+  margin-left: 710px;
+  
+font-size: 60px;
+font-family: Comic Sans MS;
+}
+
+
+#start{
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 1500px;
+  width: 100px;
+height: 100px;
+background-color: limegreen;
+font-size: 20px;
+font-family: Comic Sans MS;
+}
+
+#start:hover{
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 1500px;
+  transform: scale(1.2);
+background-color: limegreen;
+font-size: 20px;
+font-family: Comic Sans MS;
+}
+
+#start:active{
+  position: absolute;
+  margin-top: 300px;
+  margin-left: 1500px;
+  transform: scale(1.1);
+background-color: limegreen;
+font-size: 20px;
+font-family: Comic Sans MS;
+}
+
+#reset{
+  position: absolute;
+  margin-top: 500px;
+  margin-left: 1500px;
+  width: 100px;
+height: 100px;
+background-color: red;
+font-size: 20px;
+font-family: Comic Sans MS;
+}
+
+#reset:hover{
+  position: absolute;
+  margin-top: 500px;
+  margin-left: 1500px;
+  transform: scale(1.2);
+background-color: red;
+font-size: 20px;
+font-family: Comic Sans MS;
+}
+
+#reset:active{
+  position: absolute;
+  margin-top: 500px;
+  margin-left: 1500px;
+  transform: scale(1.1);
+background-color: red;
+font-size: 20px;
+font-family: Comic Sans MS;
 }
